Seriously sites without favicons aren't modern.
And we need a modern site. This may be caching issue in chrome, but
making backwards compatibility efforts while the caching resolves itself
is time well spent.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
 
 <link rel='stylesheet' id='tt-easy-google-fonts-css'  href='//fonts.googleapis.com/css?family=Alegreya%3Aregular&#038;subset=latin&#038;ver=4.5.3' type='text/css' media='all' />
-<link rel="shortcut icon" type="image/png" href="img/logo.png" /> 
+<link rel="shortcut icon" href="img/logo.ico" type="image/x-icon" />
+<link rel="icon" type="image/png" href="img/logo.png" /> 
 <link rel="apple-itouch-icon" href="img/logo.png">
 <link rel="stylesheet" type="text/css" href="css/main.css" media="all">
 
