_blank for the people.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </nav>
         <div class="title"></div>
         <div class="buttons">
-            <a href="mailto://yulia.vostrik@gmail.com" class="icon" style="background-image: url(img/icon01.png);"></a>
-            <a href="https://www.messenger.com/t/vostrikova.yulia" class="icon" style="background-image: url(img/icon02.png);"></a>
-            <a href="https://www.facebook.com/vostrikova.yulia" class="icon" style="background-image: url(img/icon04.png);"></a>
+            <a href="mailto://yulia.vostrik@gmail.com" target="_blank" class="icon" style="background-image: url(img/icon01.png);"></a>
+            <a href="https://www.messenger.com/t/vostrikova.yulia" target="_blank" class="icon" style="background-image: url(img/icon02.png);"></a>
+            <a href="https://www.facebook.com/vostrikova.yulia" target="_blank" class="icon" style="background-image: url(img/icon04.png);"></a>
         </div>
     </div>
     </header>
@@ -267,13 +267,13 @@ This is a weightless like a cloud, fragile with a light cheese cream, raspberrie
         <section id="social"  >
             <h2>Social</h2>
             <p>
-                    I have a page on facebook named <a href="https://www.facebook.com/cakesandsweettreatsyulias/">Homemade Cakes and Sweets</a>:
-                    <a href="https://www.facebook.com/cakesandsweettreatsyulias/"><img src="img/fb.jpg" alt="facebook" /></a>
+                    I have a page on facebook named <a target="_blank" href="https://www.facebook.com/cakesandsweettreatsyulias/">Homemade Cakes and Sweets</a>:
+                    <a target="_blank" href="https://www.facebook.com/cakesandsweettreatsyulias/"><img src="img/fb.jpg" alt="facebook" /></a>
 
             </p>
             <p>   
-                    My instagram profile is <a href="https://www.instagram.com/sadakova_yulia/">sadakova_yulia</a>:
-                    <a href="https://www.instagram.com/sadakova_yulia/"><img src="img/insta.jpg" alt="facebook" /></a>
+                    My instagram profile is <a target="_blank" href="https://www.instagram.com/sadakova_yulia/">sadakova_yulia</a>:
+                    <a target="_blank" href="https://www.instagram.com/sadakova_yulia/"><img src="img/insta.jpg" alt="facebook" /></a>
                
             </p>
         </section>
@@ -287,9 +287,9 @@ This is a weightless like a cloud, fragile with a light cheese cream, raspberrie
                Feel free to reachout about current availability and to just chat! You can reach me below:
             </p>
              <div class="contact">
-                <a href="mailto:yulia.vostrik@gmail.com?subject=Sadakova.com%20site"><i class="ico i-email"></i> Email yulia.vostrik@gmail.com</a>
-                <a href="https://www.messenger.com/t/vostrikova.yulia"><i class="ico i-chat"></i> Chat on facebook messanger</a>
-                <a href="https://www.facebook.com/vostrikova.yulia"><i class="ico i-facebook"></i> View facebook profile</a>
+                <a target="_blank" href="mailto:yulia.vostrik@gmail.com?subject=Sadakova.com%20site"><i class="ico i-email"></i> Email yulia.vostrik@gmail.com</a>
+                <a target="_blank" href="https://www.messenger.com/t/vostrikova.yulia"><i class="ico i-chat"></i> Chat on facebook messanger</a>
+                <a target="_blank" href="https://www.facebook.com/vostrikova.yulia"><i class="ico i-facebook"></i> View facebook profile</a>
             </div>
         </section>
 
