Mail to link fix

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
         <div class="title"></div>
         <div class="buttons">
-            <a href="mailto://yulia.vostrik@gmail.com" target="_blank" class="icon" style="background-image: url(img/icon01.png);"></a>
+            <a href="mailto:yulia.vostrik@gmail.com" target="_blank" class="icon" style="background-image: url(img/icon01.png);"></a>
             <a href="https://www.messenger.com/t/vostrikova.yulia" target="_blank" class="icon" style="background-image: url(img/icon02.png);"></a>
             <a href="https://www.facebook.com/vostrikova.yulia" target="_blank" class="icon" style="background-image: url(img/icon04.png);"></a>
         </div>
