Shaders should be faster than css blur, amirite?

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
         <div class="title"></div>
         <div class="buttons">
-            <a href="mailto:yulia.vostrik@gmail.com" target="_blank" class="icon" style="background-image: url(img/icon01.png);"></a>
+            <a href="mailto:Yulia Sadakova <sadakova.yulia@gmail.com>" target="_blank" class="icon" style="background-image: url(img/icon01.png);"></a>
             <a href="https://www.messenger.com/t/vostrikova.yulia" target="_blank" class="icon" style="background-image: url(img/icon02.png);"></a>
             <a href="https://www.facebook.com/vostrikova.yulia" target="_blank" class="icon" style="background-image: url(img/icon04.png);"></a>
         </div>
@@ -287,11 +287,13 @@ This is a weightless like a cloud, fragile with a light cheese cream, raspberrie
                Feel free to reachout about current availability and to just chat! You can reach me below:
             </p>
              <div class="contact">
-                <a target="_blank" href="mailto:yulia.vostrik@gmail.com?subject=Sadakova.com%20site"><i class="ico i-email"></i> Email yulia.vostrik@gmail.com</a>
+                <a target="_blank" href="mailto:Yulia Sadakova <sadakova.yulia@gmail.com>"><i class="ico i-email"></i> Email sadakova.yulia@gmail.com</a>
                 <a target="_blank" href="https://www.messenger.com/t/vostrikova.yulia"><i class="ico i-chat"></i> Chat on facebook messanger</a>
                 <a target="_blank" href="https://www.facebook.com/vostrikova.yulia"><i class="ico i-facebook"></i> View facebook profile</a>
             </div>
         </section>
+
+
 
 
     </article>
@@ -310,6 +312,8 @@ This is a weightless like a cloud, fragile with a light cheese cream, raspberrie
 <script src="bower_components/aquarelle/AquarellePass.js"></script>
 <script src="bower_components/three.js/examples/js/postprocessing/ShaderPass.js"></script>
 <script src="bower_components/three.js/examples/js/shaders/CopyShader.js"></script>
+<script src="bower_components/three.js/examples/js/shaders/HorizontalBlurShader.js"></script>
+<script src="bower_components/three.js/examples/js/shaders/VerticalBlurShader.js"></script>
 <script src="https://bl.ocks.org/mbostock/raw/4241134/d3.geom.contour.min.js"></script>
 
 <script src="bower_components/smooth-scroll/dist/js/smooth-scroll.min.js"></script>
