No lazy images, lets try this.

--- a/index-images-lazy.html
+++ b/index-images-lazy.html
@@ -14,7 +14,7 @@
 
 <div class="fade">
     <header>
-        <img src="img/splash.jpg" class="splash">
+        <img src="img/splash.png" class="splash">
     <div class="top">
         <a href="https://sadakova.com"><div class="logo"></div></a>
         <nav class="menu">
@@ -47,11 +47,12 @@
                 <div class="gallery">
                     
                     <figure>
-                        <img alt="Macaroons with matcha tea" 
-                             src="gallery/600px/macaroons1.jpg"
+                        <img alt="Macaroons with matcha tea" data-expand="-140" class="lazyload"
+                             data-src="gallery/600px/macaroons1.jpg"
+                             sizes="300px"
                              width="300"
                              height="200"
-                             srcset="
+                             data-srcset="
                                 gallery/300px/macaroons1.jpg 300w,
                                 gallery/600px/macaroons1.jpg 600w,
                                 gallery/900px/macaroons1.jpg 900w"
@@ -59,12 +60,12 @@
                         <figcaption>Macaroons with matcha tea</figcaption>
                     </figure>
                     <figure>
-                        <img alt="Macaroons with earl grey tea" 
-                             src="gallery/600px/macaroons2.jpg"
+                        <img alt="Macaroons with earl grey tea"   data-expand="-140" class="lazyload"
+                             data-src="gallery/600px/macaroons2.jpg"
                              sizes="300px"
                              width="300"
                              height="200"
-                             srcset="
+                             data-srcset="
                                 gallery/300px/macaroons2.jpg 300w,
                                 gallery/600px/macaroons2.jpg 600w,
                                 gallery/900px/macaroons2.jpg 900w"
@@ -72,12 +73,12 @@
                         <figcaption>Macaroons with earl grey tea</figcaption>
                     </figure>
                     <figure>
-                        <img alt="Russian Honey Cake." 
-                             src="gallery/600px/RussianHoneyCake.jpg"
+                        <img alt="Russian Honey Cake."   data-expand="-140" class="lazyload"
+                             data-src="gallery/600px/RussianHoneyCake.jpg"
                              sizes="300px"
                              width="300"
                              height="200"
-                             srcset="
+                             data-srcset="
                                 gallery/300px/RussianHoneyCake.jpg 300w,
                                 gallery/600px/RussianHoneyCake.jpg 600w,
                                 gallery/900px/RussianHoneyCake.jpg 900w"
@@ -85,12 +86,12 @@
                         <figcaption>Russian Honey Cake. Recipe from my mom, so this is a try taste of this cake! And a big Favorite of our customers!</figcaption>
                     </figure>
                     <figure>
-                        <img alt="IBIZA cake" 
-                             src="gallery/600px/Ibiza-for-Albina.jpg"
+                        <img alt="IBIZA cake" data-expand="-140" class="lazyload"
+                             data-src="gallery/600px/Ibiza-for-Albina.jpg"
                              sizes="300px"
                              width="300"
                              height="200"
-                             srcset="
+                             data-srcset="
                                 gallery/300px/Ibiza-for-Albina.jpg 300w,
                                 gallery/600px/Ibiza-for-Albina.jpg 600w,
                                 gallery/900px/Ibiza-for-Albina.jpg 900w"
@@ -98,11 +99,11 @@
                         <figcaption>IBIZA cake. The recipe of the best patisserie Pierre Herme. This cake with pistachio dacquoise and with a light orange mousse and another mousse with homemade pistachio nougat. With almond nougatine finish. Delicious!</figcaption>
                     </figure>
                     <figure>
-                        <img src="gallery/600px/lavander-and-blueberry.jpg"
-                             sizes="300px" 
+                        <img data-src="gallery/600px/lavander-and-blueberry.jpg"
+                             sizes="300px" data-expand="-140" class="lazyload"
                              width="300"
                              height="200"
-                             srcset="
+                             data-srcset="
                                 gallery/300px/lavander-and-blueberry.jpg 300w,
                                 gallery/600px/lavander-and-blueberry.jpg 600w,
                                 gallery/900px/lavander-and-blueberry.jpg 900w"
@@ -111,11 +112,11 @@
                         <figcaption>Angel cake. Light vanilla cake with lavender sirup and blueberry covered with cloud of cream</figcaption>
                     </figure>
                     <figure>
-                        <img src="gallery/600px/RussianHoneyCake.jpg"
-                             sizes="300px" 
+                        <img data-src="gallery/600px/RussianHoneyCake.jpg"
+                             sizes="300px" data-expand="-140" class="lazyload"
                              width="300"
                              height="200"
-                             srcset="
+                             data-srcset="
                                 gallery/300px/3.jpg 300w,
                                 gallery/600px/3.jpg 600w,
                                 gallery/900px/3.jpg 900w"
@@ -124,11 +125,11 @@
                         <figcaption>Angel cake. This is a light sponge with rose water and raspberry homemade jam under a delicate cream cheese</figcaption>
                     </figure>
                     <figure>
-                        <img src="gallery/600px/1.jpg"
-                             sizes="300px" 
+                        <img data-src="gallery/600px/1.jpg"
+                             sizes="300px" data-expand="-140" class="lazyload"
                              width="300"
                              height="200"
-                             srcset="
+                             data-srcset="
                                 gallery/300px/1.jpg 300w,
                                 gallery/600px/1.jpg 600w,
                                 gallery/900px/1.jpg 900w"
@@ -137,11 +138,11 @@
                         <figcaption>Esterhazy torte. You can find light merengue with walnuts and light butter cream with cherry flavored cognac! It is sweet and delicate</figcaption>
                     </figure>
                     <figure>
-                        <img src="gallery/600px/2.jpg"
-                             sizes="300px" 
+                        <img data-src="gallery/600px/2.jpg"
+                             sizes="300px" data-expand="-140" class="lazyload"
                              width="300"
                              height="200"
-                             srcset="
+                             data-srcset="
                                 gallery/300px/2.jpg 300w,
                                 gallery/600px/2.jpg 600w,
                                 gallery/900px/2.jpg 900w"
@@ -150,11 +151,11 @@
                         <figcaption>Tres leches with thin layer of cheese cream and fresh raspberry</figcaption>
                     </figure>
                     <figure>
-                        <img src="gallery/600px/cheesecake.jpg"
-                             sizes="300px" 
+                        <img data-src="gallery/600px/cheesecake.jpg"
+                             sizes="300px" data-expand="-140" class="lazyload"
                              width="300"
                              height="200"
-                             srcset="
+                             data-srcset="
                                 gallery/300px/cheesecake.jpg 300w,
                                 gallery/600px/cheesecake.jpg 600w,
                                 gallery/900px/cheesecake.jpg 900w"
@@ -163,11 +164,11 @@
                         <figcaption>Cheesecake with homemade strawberry jam</figcaption>
                     </figure>
                     <figure>
-                        <img src="gallery/600px/Pavlova.jpg"
-                             sizes="300px" 
+                        <img data-src="gallery/600px/Pavlova.jpg"
+                             sizes="300px" data-expand="-140" class="lazyload"
                              width="300"
                              height="200"
-                             srcset="
+                             data-srcset="
                                 gallery/300px/Pavlova.jpg 300w,
                                 gallery/600px/Pavlova.jpg 600w,
                                 gallery/900px/Pavlova.jpg 900w"
@@ -177,11 +178,11 @@
 This is a weightless like a cloud, fragile with a light cheese cream, raspberries, sunny peach and interesting note of basil</figcaption>
                     </figure>
                     <figure>
-                        <img src="gallery/600px/Pistashio-for-Anna.jpg"
-                             sizes="300px" 
+                        <img data-src="gallery/600px/Pistashio-for-Anna.jpg"
+                             sizes="300px" data-expand="-140" class="lazyload"
                              width="300"
                              height="200"
-                             srcset="
+                             data-srcset="
                                 gallery/300px/Pistashio-for-Anna.jpg 300w,
                                 gallery/600px/Pistashio-for-Anna.jpg 600w,
                                 gallery/900px/Pistashio-for-Anna.jpg 900w"
@@ -190,11 +191,11 @@ This is a weightless like a cloud, fragile with a light cheese cream, raspberrie
                         <figcaption>Pistachio with raspberry cake</figcaption>
                     </figure>
                     <figure>
-                        <img src="gallery/600px/Profiteroles.jpg"
-                             sizes="300px" 
+                        <img data-src="gallery/600px/Profiteroles.jpg"
+                             sizes="300px" data-expand="-140" class="lazyload"
                              width="300"
                              height="200"
-                             srcset="
+                             data-srcset="
                                 gallery/300px/Profiteroles.jpg 300w,
                                 gallery/600px/Profiteroles.jpg 600w,
                                 gallery/900px/Profiteroles.jpg 900w"
@@ -203,11 +204,11 @@ This is a weightless like a cloud, fragile with a light cheese cream, raspberrie
                         <figcaption>Profiteroles with an orange creme. They are incredible!!!</figcaption>
                     </figure>
                     <figure>
-                        <img src="gallery/600px/Tres-Leche.jpg"
-                             sizes="300px" 
+                        <img data-src="gallery/600px/Tres-Leche.jpg"
+                             sizes="300px" data-expand="-140" class="lazyload"
                              width="300"
                              height="200"
-                             srcset="
+                             data-srcset="
                                 gallery/300px/Tres-Leche.jpg 300w,
                                 gallery/600px/Tres-Leche.jpg 600w,
                                 gallery/900px/Tres-Leche.jpg 900w"
@@ -216,11 +217,11 @@ This is a weightless like a cloud, fragile with a light cheese cream, raspberrie
                         <figcaption>Tres leches with thin layers of cheese cream</figcaption>
                     </figure>
                     <figure>
-                        <img src="gallery/600px/Sacher.jpg"
-                             sizes="300px" 
+                        <img data-src="gallery/600px/Sacher.jpg"
+                             sizes="300px" data-expand="-140" class="lazyload"
                              width="300"
                              height="200"
-                             srcset="
+                             data-srcset="
                                 gallery/300px/Sacher.jpg 300w,
                                 gallery/600px/Sacher.jpg 600w,
                                 gallery/900px/Sacher.jpg 900w"
@@ -230,11 +231,11 @@ This is a weightless like a cloud, fragile with a light cheese cream, raspberrie
                     </figure>
                     
                     <figure>
-                        <img src="gallery/600px/Vanilla-Rufina.jpg"
-                             sizes="300px" 
+                        <img data-src="gallery/600px/Vanilla-Rufina.jpg"
+                             sizes="300px" data-expand="-140" class="lazyload"
                              width="300"
                              height="200"
-                             srcset="
+                             data-srcset="
                                 gallery/300px/Vanilla-Rufina.jpg 300w,
                                 gallery/600px/Vanilla-Rufina.jpg 600w,
                                 gallery/900px/Vanilla-Rufina.jpg 900w"
