Smaller images make people happy.

--- a/index.html
+++ b/index.html
@@ -316,8 +316,8 @@ This is a weightless like a cloud, fragile with a light cheese cream, raspberrie
 <script src="https://bl.ocks.org/mbostock/raw/4241134/d3.geom.contour.min.js"></script>
 
 <script src="bower_components/smooth-scroll/dist/js/smooth-scroll.min.js"></script>
-<script src="bower_components/vanilla-lazyload/dist/lazyload.min.js"></script>
+<!--<script src="bower_components/vanilla-lazyload/dist/lazyload.min.js"></script>-->
 
-<script src="js/main.js"></script>
+<script async src="js/main.js"></script>
 </body>
 </html>
