--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="icon" type="image/png" href="img/logo.png" /> 
     <link rel="apple-itouch-icon" href="img/logo.png">
+    <meta name="viewport" content="initial-scale = 1.0" />
 </head>
 <body>
 
