--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         </nav>
         <div class="title"></div>
         <div class="buttons">
-            <a href="mailto:Yulia Sadakova <sadakova.yulia@gmail.com>" target="_blank" class="icon" style="background-image: url(img/icon01.png);"></a>
-            <a href="https://www.messenger.com/t/vostrikova.yulia" target="_blank" class="icon" style="background-image: url(img/icon02.png);"></a>
-            <a href="https://www.facebook.com/vostrikova.yulia" target="_blank" class="icon" style="background-image: url(img/icon04.png);"></a>
+            <a href="mailto:Yulia Sadakova <sadakova.yulia@gmail.com>" target="_blank" class="icon i-email"></a>
+            <a href="https://www.instagram.com/sadakova_yulia/" target="_blank" class="icon i-insta"></a>
+            <a href="https://www.facebook.com/vostrikova.yulia" target="_blank" class="icon i-fb"></a>
         </div>
     </div>
     </header>
@@ -287,9 +287,11 @@ This is a weightless like a cloud, fragile with a light cheese cream, raspberrie
                Feel free to reachout about current availability and to just chat! You can reach me below:
             </p>
              <div class="contact">
-                <a target="_blank" href="mailto:Yulia Sadakova <sadakova.yulia@gmail.com>"><i class="ico i-email"></i> Email sadakova.yulia@gmail.com</a>
+                <a target="_blank" href="mailto:Yulia Sadakova <sadakova.yulia@gmail.com>"><i class="ico i-email"></i> sadakova.yulia@gmail.com</a>
                 <a target="_blank" href="https://www.messenger.com/t/vostrikova.yulia"><i class="ico i-chat"></i> Chat on facebook messenger</a>
-                <a target="_blank" href="https://www.facebook.com/vostrikova.yulia"><i class="ico i-facebook"></i> View facebook profile</a>
+                <a target="_blank" href="https://www.facebook.com/vostrikova.yulia"><i class="ico i-fb"></i> View on facebook</a>
+                <a target="_blank" href="https://www.instagram.com/sadakova_yulia/"><i class="ico i-insta"></i> View on instagram</a>
+                
             </div>
         </section>
 
