Fixed up rendering loop in aquarelle lib
Also fastfarwards. iPhone 5s works well now. Nexus 5 not so much.

--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
 <link rel='stylesheet' id='tt-easy-google-fonts-css'  href='//fonts.googleapis.com/css?family=Alegreya%3Aregular&#038;subset=latin&#038;ver=4.5.3' type='text/css' media='all' />
 <link rel="stylesheet" type="text/css" href="css/main.css" media="all">
 
-<div class="fade">
+<div class="container">
     <header>
         <img src="img/splash.jpg" class="splash">
-    <div class="top">
-        <a href="https://sadakova.com"><div class="logo"></div></a>
-        <nav class="menu">
-            <a href="#gallery" data-scroll>gallery</a>
-            <a href="#social" data-scroll>social</a>
-            <a href="#contact" data-scroll>contact</a>
-        </nav>
-        <div class="title"></div>
-        <div class="buttons">
-            <a href="mailto:Yulia Sadakova <sadakova.yulia@gmail.com>" target="_blank" class="icon i-email"></a>
-            <a href="https://www.instagram.com/sadakova_yulia/" target="_blank" class="icon i-insta"></a>
-            <a href="https://www.facebook.com/vostrikova.yulia" target="_blank" class="icon i-fb"></a>
+        <div class="top">
+            <a href="https://sadakova.com"><div class="logo"></div></a>
+            <nav class="menu">
+                <a href="#gallery" data-scroll>gallery</a>
+                <a href="#social" data-scroll>social</a>
+                <a href="#contact" data-scroll>contact</a>
+            </nav>
+            <div class="title"></div>
+            <div class="buttons">
+                <a href="mailto:Yulia Sadakova <sadakova.yulia@gmail.com>" target="_blank" class="icon i-email"></a>
+                <a href="https://www.instagram.com/sadakova_yulia/" target="_blank" class="icon i-insta"></a>
+                <a href="https://www.facebook.com/vostrikova.yulia" target="_blank" class="icon i-fb"></a>
+            </div>
         </div>
-    </div>
     </header>
 
     <article class="main-content">
@@ -243,7 +243,6 @@ This is a weightless like a cloud, fragile with a light cheese cream, raspberrie
                         />
                         <figcaption>Vanilla cake. With almond sponge, bavarian vanilla mousse and cream brulee.</figcaption>
                     </figure>
-                    
                     
                 </div>
             </div>
