Adding link back to top

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="apple-itouch-icon" href="img/logo.png">
     <meta name="viewport" content="initial-scale = 1.0, maximum-scale = 1" />
 </head>
-<body>
+<body >
 
 <link rel='stylesheet' id='tt-easy-google-fonts-css'  href='//fonts.googleapis.com/css?family=Alegreya%3Aregular&#038;subset=latin&#038;ver=4.5.3' type='text/css' media='all' />
 <link rel="stylesheet" type="text/css" href="css/main.css" media="all">
 
-<div class="container">
+<div class="container" >
     <header>
         <img src="img/splash.jpg" class="splash">
         <div class="top">
@@ -294,9 +294,10 @@ This is a weightless like a cloud, fragile with a light cheese cream, raspberrie
             <a target="_blank" href="https://www.instagram.com/sadakova_yulia/"><i class="ico i-insta"></i> View on instagram</a>    
         </div>
 
-
-
-
+        <section class="backtotop">
+            <a href="body" data-scroll><div class="logo"></div></a>
+        </section>
+        
     </article>
     <footer>
         &copy; <script>document.write(new Date().getFullYear())</script>
