--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <div class="container" >
     <header>
-        <img src="img/splash.jpg" class="splash">
+        <img src="img/splash.jpg" class="splash fade">
         <div class="top">
             <a href="https://sadakova.com"><div class="logo"></div></a>
             <nav class="menu">
