Adding fade to top too.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="container" >
     <header>
         <img src="img/splash.jpg" class="splash fade">
-        <div class="top">
+        <div class="top fade">
             <a href="https://sadakova.com"><div class="logo"></div></a>
             <nav class="menu">
                 <a href="#gallery" data-scroll>gallery</a>
